--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
   <link rel="icon" href="favicon2.ico" />
+  <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 </head>
 
 <body>
